--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,10 @@
         "firebaseapp",
         "firestore",
         "Firestore",
-        "Krwv"
+        "firstore",
+        "Krwv",
+        "Nedit",
+        "noopener",
+        "noreferrer"
     ]
 }
