--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^9.8.3",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -50,5 +51,8 @@
   "bugs": {
     "url": "https://github.com/woz-u/Crafting-Group/issues"
   },
-  "homepage": "https://github.com/woz-u/Crafting-Group#readme"
+  "homepage": "https://github.com/woz-u/Crafting-Group#readme",
+  "devDependencies": {
+    "@redux-devtools/core": "^3.13.1"
+  }
 }
