--- a/Task-manager-main/package.json
+++ b/Task-manager-main/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.4",
     "firebase-tools": "^1.2.0",
     "react": "^17.0.2",
