--- a/Task-manager-main/package.json
+++ b/Task-manager-main/package.json
@@ -11,6 +11,7 @@
     "firebase-tools": "^1.2.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-images-uploading": "^3.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^1.0.1"
