--- a/Task-manager-main/package.json
+++ b/Task-manager-main/package.json
@@ -8,12 +8,12 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.2.0-beta1",
     "firebase": "^9.8.4",
-    "firebase-tools": "^1.2.0",
+    "firebase-tools": "^11.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-images-uploading": "^3.1.6",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
@@ -39,5 +39,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "packageManager": "yarn@3.2.1"
 }
