--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.2.1"
+  "packageManager": "yarn@3.2.1",
+  "devDependencies": {
+    "babel-plugin-react-require": "^3.1.3"
+  }
 }
